Change the name of the Guzzle client

--- a/config/packages/csa_guzzle.yaml
+++ b/config/packages/csa_guzzle.yaml
@@ -4,6 +4,6 @@
 csa_guzzle:
     profiler: '%kernel.debug%'
     clients:
-        weather:
+        leshabitues:
             config:
                 base_uri: https://www.leshabitues.fr
