Treatment of data: without constraint validator and flush to the database

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,3 +34,4 @@ services:
             $apiClient: '@csa_guzzle.client.leshabitues'
             $serializer: '@jms_serializer'
             $logger: '@monolog.logger.php'
+            $repository: '@App\Repository\ShopRepository'
