Performance gain: call directly the validator service instead the container

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,4 +36,4 @@ services:
             $logger: '@monolog.logger.php'
             $repository: '@App\Repository\ShopRepository'
             $entityManager: '@doctrine.orm.entity_manager'
-            $container: '@service_container'
+            $validator: '@debug.validator'
