--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "doctrine/orm": "^2.7",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
+        "nelmio/api-doc-bundle": "^3.6",
+        "pagerfanta/pagerfanta": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
@@ -37,7 +39,8 @@
         "symfony/web-link": "4.4.*",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "willdurand/hateoas-bundle": "^2.1"
     },
     "require-dev": {
         "symfony/browser-kit": "^4.4",
