--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
         "nelmio/api-doc-bundle": "^3.6",
+        "pagerfanta/doctrine-orm-adapter": "^2.4",
         "pagerfanta/pagerfanta": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
