--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "doctrine/orm": "^2.7",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
-        "nelmio/api-doc-bundle": "^3.6",
+        "nelmio/api-doc-bundle": "^3.7",
         "pagerfanta/doctrine-orm-adapter": "^2.4",
         "pagerfanta/pagerfanta": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.2",
@@ -41,7 +41,8 @@
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "willdurand/hateoas-bundle": "^2.1"
+        "willdurand/hateoas-bundle": "^2.1",
+        "zircote/swagger-php": "2.0.9"
     },
     "require-dev": {
         "symfony/browser-kit": "^4.4",
