--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
         "nelmio/api-doc-bundle": "^3.7",
